Display training loss in Kaibu

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -1,53 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download example dataset\n",
+    "\n",
+    "The dataset will be saved to `./data/hpa_dataset_v2`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python download_example_dataset.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Start the interactive segmentation interface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Segmentation Models: using `tf.keras` framework.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/5 [00:00<?, ?it/s]/home/weiouyang/miniconda3/envs/iteractive-ml/lib/python3.7/site-packages/skimage/util/dtype.py:226: DeprecationWarning: Converting `np.inexact` or `np.floating` to a dtype is deprecated. The current result is `float64` which is not strictly correct.\n",
-      "  dtypeobj_out = np.dtype(dtype)\n",
-      "100%|██████████| 5/5 [00:04<00:00,  1.19it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "window.connectPlugin && window.connectPlugin(\"698dfc4a-8101-453b-8e4d-5457a4375ffc\")"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"a748deca-53d5-4080-b6a0-b20e76c80c41\"></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from imjoy_plugin import start_interactive_segmentation\n",
     "\n",
@@ -56,6 +40,13 @@
     "                               object_name=\"cell\",\n",
     "                               scale_factor=0.5,\n",
     "                               resume=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interact with the trainer"
    ]
   },
   {
