resume training history; fix image size

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -38,7 +38,7 @@
     "start_interactive_segmentation(\"./data/hpa_dataset_v2\",\n",
     "                               [\"microtubules.png\", \"er.png\", \"nuclei.png\"],\n",
     "                               object_name=\"cell\",\n",
-    "                               scale_factor=0.5,\n",
+    "                               scale_factor=1.0,\n",
     "                               resume=True)"
    ]
   },
@@ -82,6 +82,15 @@
     "import matplotlib.pyplot as plt\n",
     "loss = [report['loss'] for report in reports]\n",
     "plt.plot(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reports"
    ]
   },
   {
