clone master branch

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apply to Colab only (skip t line if not in colab)\n",
+    "# First line applies only to Colab\n",
     "git clone and set up environment for colab run"
    ]
   },
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone -b keep_prediction_array https://github.com/imjoy-team/imjoy-interactive-segmentation.git\n",
+    "!git clone https://github.com/imjoy-team/imjoy-interactive-segmentation.git\n",
     "%cd imjoy-interactive-segmentation\n",
     "!pip install -r requirements.txt\n",
     "!python3 -m ipykernel install --user --name imjoy-interactive-ml --display-name \"ImJoy Interactive ML\""
