fix to support colab (#12)
* keep prediction array

* fix _mask_prediction

* fix push sample

* fix show augementation for colab support

* clone master branch

* keep signature for push_sample

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -4,6 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# First line applies only to Colab\n",
+    "git clone and set up environment for colab run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/imjoy-team/imjoy-interactive-segmentation.git\n",
+    "%cd imjoy-interactive-segmentation\n",
+    "!pip install -r requirements.txt\n",
+    "!python3 -m ipykernel install --user --name imjoy-interactive-ml --display-name \"ImJoy Interactive ML\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Download example dataset\n",
     "\n",
     "The dataset will be saved to `./data/hpa_dataset_v2`"
@@ -144,9 +164,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ImJoy Iteractive ML",
+   "display_name": "ImJoy Interactive ML",
    "language": "python",
-   "name": "imjoy-iteractive-ml"
+   "name": "imjoy-interactive-ml"
   },
   "language_info": {
    "codemirror_mode": {
