--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -54,8 +54,15 @@
    "outputs": [],
    "source": [
     "from imjoy_plugin import start_interactive_segmentation\n",
+    "from models.interactive_cellpose import CellPoseInteractiveModel\n",
     "\n",
-    "start_interactive_segmentation(\"./data/hpa_dataset_v2\",\n",
+    "model = CellPoseInteractiveModel('./data/hpa_dataset_v2/__models__',\n",
+    "                                 channels=[2, 3],\n",
+    "                                 style_on=0,\n",
+    "                                 default_diameter=100)\n",
+    "\n",
+    "start_interactive_segmentation(model,\n",
+    "                               \"./data/hpa_dataset_v2\",\n",
     "                               [\"microtubules.png\", \"er.png\", \"nuclei.png\"],\n",
     "                               object_name=\"cell\",\n",
     "                               scale_factor=1.0,\n",
@@ -178,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
