--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# First line applies only to Colab\n",
-    "git clone and set up environment for colab run"
+    "# Setup for Google Colab\n",
+    "(Skip this step if you are running in a Jupyter notebook)"
    ]
   },
   {
@@ -18,6 +18,18 @@
     "%cd imjoy-interactive-segmentation\n",
     "!pip install -r requirements.txt\n",
     "!python3 -m ipykernel install --user --name imjoy-interactive-ml --display-name \"ImJoy Interactive ML\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup for Jupyter notebook\n",
+    "(Skip this step for Google Colab)\n",
+    "\n",
+    "Please make sure you installed the ImJoy extension by running `pip install imjoy imjoy-jupyter-extension`. After installing, restart your Jupyter notebook.\n",
+    "\n",
+    "Note: Before start, please make sure you see <img alt=\"an ImJoy icon\" src=\"https://imjoy.io/static/img/imjoy-logo-black.svg\" style=\"width:60px;display:inline-block;\"></img> in the toolbar.\n"
    ]
   },
   {
@@ -57,6 +69,7 @@
     "from models.interactive_cellpose import CellPoseInteractiveModel\n",
     "\n",
     "model = CellPoseInteractiveModel('./data/hpa_dataset_v2/__models__',\n",
+    "                                 pretrained_model=False, # \n",
     "                                 channels=[2, 3],\n",
     "                                 style_on=0,\n",
     "                                 default_diameter=100)\n",
