--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -59,11 +59,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** TORCH CUDA version installed and working. **\n",
+      ">>>> using GPU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:02<00:00,  1.14s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "window.connectPlugin && window.connectPlugin(\"1560afae-5e1e-450f-b30b-f3da1e896f42\")"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"0fd53168-640d-473a-8c17-bcbf6ac8f3ad\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<imjoy_plugin.ImJoyPlugin at 0x7f1ca6c119e8>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from imjoy_plugin import start_interactive_segmentation\n",
     "from models.interactive_cellpose import CellPoseInteractiveModel\n",
@@ -79,7 +137,7 @@
     "                               [\"microtubules.png\", \"er.png\", \"nuclei.png\"],\n",
     "                               object_name=\"cell\",\n",
     "                               scale_factor=1.0,\n",
-    "                               resume=True)"
+    "                               resume=False)"
    ]
   },
   {
@@ -198,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
