Update instructions for colab

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Setup for Google Colab\n",
-    "(Skip this step if you are running in a Jupyter notebook)"
+    "(Skip this step if you are running in a Jupyter notebook)\n",
+    "\n",
+    "**Note: please make sure you switched on GPU runtime by choosing \"Runtime -> Change runtime type -> Hardware accelerator -> GPU\" and click \"Save\"**"
    ]
   },
   {
@@ -29,7 +31,7 @@
     "\n",
     "Please make sure you installed the ImJoy extension by running `pip install imjoy imjoy-jupyter-extension`. After installing, restart your Jupyter notebook.\n",
     "\n",
-    "Note: Before start, please make sure you see <img alt=\"an ImJoy icon\" src=\"https://imjoy.io/static/img/imjoy-logo-black.svg\" style=\"width:60px;display:inline-block;\"></img> in the toolbar.\n"
+    "**Note: Before start, please make sure you see an ImJoy icon in the toolbar.**\n"
    ]
   },
   {
