--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -16,9 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/imjoy-team/imjoy-interactive-segmentation.git\n",
-    "%cd imjoy-interactive-segmentation\n",
-    "!pip install -r requirements.txt\n",
+    "!pip install git+https://github.com/imjoy-team/imjoy-interactive-segmentation@python-package#egg=imjoy-interactive-segmentation\n",
     "!python3 -m ipykernel install --user --name imjoy-interactive-ml --display-name \"ImJoy Interactive ML\""
    ]
   },
@@ -67,7 +65,7 @@
    },
    "outputs": [],
    "source": [
-    "from imjoy_plugin import start_interactive_segmentation\n",
+    "from imjoy_interactive_trainer.imjoy_plugin import start_interactive_segmentation\n",
     "\n",
     "model_config = dict( type=\"cellpose\",\n",
     "                     model_dir='./data/hpa_dataset_v2/__models__',\n",
@@ -101,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "from interactive_trainer import InteractiveTrainer\n",
+    "from imjoy_interactive_trainer.interactive_trainer import InteractiveTrainer\n",
     "trainer = InteractiveTrainer.get_instance()"
    ]
   },
@@ -179,9 +177,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ImJoy Interactive ML",
+   "display_name": "ImJoy Iteractive ML",
    "language": "python",
-   "name": "imjoy-interactive-ml"
+   "name": "imjoy-iteractive-ml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -193,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
