Fix installation command

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install git+https://github.com/imjoy-team/imjoy-interactive-segmentation@python-package#egg=imjoy-interactive-segmentation\n",
+    "!pip install git+https://github.com/imjoy-team/imjoy-interactive-segmentation@python-package#egg=imjoy-interactive-pip install git+https://github.com/imjoy-team/imjoy-interactive-segmentation@python-package#egg=imjoy-interactive-trainer\n",
     "!python3 -m ipykernel install --user --name imjoy-interactive-ml --display-name \"ImJoy Interactive ML\""
    ]
   },
@@ -47,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python download_example_dataset.py"
+    "from imjoy_interactive_trainer.data_utils import download_example_dataset\n",
+    "download_example_dataset()"
    ]
   },
   {
