--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install git+https://github.com/imjoy-team/imjoy-interactive-segmentation@python-package#egg=imjoy-interactive-pip install git+https://github.com/imjoy-team/imjoy-interactive-segmentation@python-package#egg=imjoy-interactive-trainer\n",
+    "!pip install git+https://github.com/imjoy-team/imjoy-interactive-segmentation@python-package#egg=imjoy-interactive-trainer\n",
     "!python3 -m ipykernel install --user --name imjoy-interactive-ml --display-name \"ImJoy Interactive ML\""
    ]
   },
